--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -107,8 +107,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1.5"
                     android:text="Item Name"
+                    android:textSize="13dp"
                     android:textColor="@color/colorOnPrimary"
                     android:textStyle="bold" />
 
@@ -117,6 +118,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="MRP"
+                    android:textSize="15dp"
+                    android:gravity="end"
                     android:textColor="@color/colorOnPrimary"
                     android:textStyle="bold" />
 
@@ -125,6 +128,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Discount%"
+                    android:textSize="15dp"
+                    android:gravity="end"
                     android:textColor="@color/colorOnPrimary"
                     android:textStyle="bold" />
 
@@ -133,7 +138,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Quantity"
-                    android:textSize="10.dp"
+                    android:textSize="15dp"
+                    android:gravity="end"
                     android:textColor="@color/colorOnPrimary"
                     android:textStyle="bold" />
 
@@ -142,6 +148,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Final Amt"
+                    android:textSize="15dp"
+                    android:gravity="end"
                     android:textColor="@color/colorOnPrimary"
                     android:textStyle="bold"/>
             </LinearLayout>
