--- a/app/src/main/res/layout/invoice_item_row_layout.xml
+++ b/app/src/main/res/layout/invoice_item_row_layout.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="100"
+            android:gravity="end"
             android:textColor="@color/textPrimary" />
 
         <TextView
@@ -32,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="10%"
+            android:gravity="end"
             android:textColor="@color/textPrimary" />
 
         <LinearLayout
@@ -49,8 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
-                android:gravity="center"
                 android:layout_weight="1"
+                android:gravity="end"
                 android:textColor="@color/textPrimary" />
         </LinearLayout>
 
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="90"
+            android:gravity="end"
             android:textColor="@color/textPrimary" />
     </LinearLayout>
 
