--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -198,6 +198,7 @@
             android:textColor="@color/colorOnPrimary"/>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/orders_page_resetBtn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
